'url' attribute was not specified, changed name of attribute ulr -> url in application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
  datasource:
-    ulr: jdbc:postgresql://localhost:5332/customer
+    url: jdbc:postgresql://localhost:5332/customer
     username: yaroslavcode
     password: password
  jpa:
