--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 
 spring:
  datasource:
-    url: jdbc:postgresql://localhost:5332/customer
-    username: yaroslavcode
+    url: jdbc:postgresql://localhost:5432/customer
+    username: admin
     password: password
  jpa:
       hibernate:
