Added Spring Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,16 @@ spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+spring.main.banner-mode=off
+
+management.endpoints.web.exposure.include=health,info,prometheus
+management.info.env.enabled = true
+
+info.app.name=Spring Boot My CRUD
+info.app.description= My CRUD
+info.app.version= 1.0.0
+
+info.company.name=Home
+
+management.endpoint.health.show-details=always
